--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,13 @@
     "name": "rampmaster-spa/openfactura-lib",
     "description": "Libreria de de integración no oficial con openfactura",
     "type": "library",
-    "minimum-stability": "dev",
     "require": {
         "guzzlehttp/guzzle": "^6"
     },
     "autoload": {
         "psr-4": {
-            "RampmasterSpA": "/src/"
-        },
+            "RampmasterSpA\\": "/src/"
+        }
     },
     "license": "MIT",
     "authors": [
